<resources>
    <string name="app_name">SuperMiniCalculadora</string>
    <string name="str_num1">Número 1:</string>
    <string name="str_num2">Número 2:</string>
    <string name="str_hintNum">Introduzca un número entero</string>
    <string name="str_btnSuma">+</string>
    <string name="str_btnResta">-</string>
    <string name="str_btnMultiplica">x</string>
    <string name="str_btnDivide">/</string>
    <string name="str_btnBorrar">BORRAR</string>
</resources>